--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ coverage
 
 # Bower dependency directory (https://bower.io/)
 bower_components
+citi-release/
 
 # node-waf configuration
 .lock-wscript
